# srepkg

./: .coverage  .coveragerc  .coveragerc.old  .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  Serial strategy: Build sdist then modify construct.txt  coverage.xml  index.html  mkdocs.yml  prog.py  pyproject.toml  pytest.ini.old  setup.cfg  setup.cfg.unused  setup.py  sitemap.xml
.github/workflows/: test.yml
black_as_blacksrepkg_orig/: base_setup.cfg
black_for_inspection/black_as_blacksrepkg/: MANIFEST.in  inner_pkg_install.cfg  setup.cfg
black_for_inspection/black_as_blacksrepkg/blacksrepkg/srepkg_entry_points/: __init__.py
compare_with_pipx/: index.html
config_parser_practice/: practice.py  setup_template.cfg
demo/oldmath/: pyproject.toml
demo/oldmath/src/oldmath/: __main__.py
docs/: compare_with_pipx.md  comparison_with_pipx.md  description.md  examples.md  getting_started.md  index.md
docs/source/: conf.py  description.rst  examples.rst  getting_started.rst  index.rst  usage.rst
examples/: index.html
getting_started/: index.html
hpkg/: __init__.py  __main__.py  hpkg_builder.py  hpkg_input.py  path_calculator.py  path_finder.py
hpkg/builder/: hpkg_builder.py
hpkg/input/: hpkg_input.py
hpkg/install_components/: __init__.py  hpkg_driver.py  main_inner.py  main_inner.py.template  main_outer.py  main_outer.py.template  pkg_name.py.template  safe_main.py  setup.py.template
pkghhat/: hpkg_builder.py
prototypes/: notes.txt
prototypes/black_as_blacksrepkg_orig/: MANIFEST.in  setup.cfg  setup.py
prototypes/black_as_blacksrepkg_pyproject_toml/: cmd_classes.py  pyproject.toml
safe_repkg/: enums.py  hpkg_builder.py  package_name.py.template  safe_main.py.template  safe_package.py  safe_pkg_builder.py
safe_repkg/builder/: safe_pkg_builder.py
safe_repkg/driver/: safe_pkg_controller.py  safe_pkg_paths.py
safe_repkg/install_components/: hpkg_driver.py  safe_main.py
safe_xiangqi_game/: setup.py
safe_xiangqigame/: __main__.py
safe_xiangqigame/xiangqigame/: __init__.py  __main__.py
search/: search_index.json
src/: original_src_preparer_dispatchers.py
src/custom_datatypes/: __init__.py  builder_dest_paths.py  builder_src_paths.py  named_tuples.py
src/error_handling/: custom_exceptions.py  error_messages.py
src/inner_pkg_installer/: cmd_classes.py  inner_pkg_installer.py  simple_status.py  yaspin_status.py  yaspin_updater.py
src/paths_class_builder/: __main__.py  builder.py  paths_class_builder.py
src/shared_data_structures/: __init__.py  builder_src_paths.py  console_script_entry.py  named_tuples.py
src/srepkg/: .coverage  __init__.py  archive_retriever.py  command_class_test.py  command_input.py  command_input_new.py  construction_dir.py  construction_dir_new.py  cs_entry_pts.py  custom_env_builder.py  dist_builder.py  dist_builder_runner.py  dist_builder_sub_process.py  dist_provider.py  distribution_buillder.py  entry_point_name_modifier.py  entry_points_builder.py  inner_pkg_installer.py  loggers.py  logging_initializer.py  named_tuple_test.py  orig_pkg_inspector.py  orig_pkg_retriever.py  orig_src_preparer.py  orig_src_preparer_interfaces.py  path_calculator.py  remote_pkg_retriever.py  repackager.py  repackager_data_structs.py  repackager_interfaces.py  repackager_new.py  repackager_new_interfaces.py  retriever_provider_shared_interface.py  service_builder.py  service_class_builder.py  service_registry.py  setup_file_reader.py  shared_interfaces.py  src_retriever.py  srepkg.py  (+10 more)
src/srepkg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/srepkg/test/package_test_cases/t_proj_as_t_projsrepkg/: MANIFEST.in  inner_pkg_install.cfg  setup.cfg
src/srepkg/test/package_test_cases/t_proj_as_t_projsrepkg/t_projsrepkg/: setup.cfg
src/srepkg/test/package_test_cases/t_proj_as_t_projsrepkg/t_projsrepkg/src/t_proj/: app.py
src/srepkg/test/package_test_cases/t_proj_as_t_projsrepkg/t_projsrepkg/src/z_proj/x_proj/: test.py
src/srepkg/test/package_test_cases/tproj/: setup.cfg
src/srepkg/test/package_test_cases/tproj_as_tprojsrepkg/: MANIFEST.in  inner_pkg_install.cfg  setup.cfg
src/srepkg/test/package_test_cases/tproj_as_tprojsrepkg/tprojsrepkg/src/t_proj/: __main__.py
src/srepkg/test/t_data/package_test_cases/t_nonsrc/: setup.cfg
src/srepkg_shadow/: command_input.py  construction_dir.py  repackager.py  repackager_interfaces.py  service_class_builder.py  shared_data_structures.py  srepkg.py
srepkg/: __main__.py  command_input.py  config_builder.py  dest_paths.py  dest_paths_builder.py  ep_console_script.py  named_tup_practice.py  new_structure.py  orig_pkg_inspector.py  path_calculator.py  path_calculator_2.py  path_trees.py  paths_builder.py  src_file_structure.py  sre_packager.py  srepkg.py  srepkg_builder.py  srepkg_input.py  utilities.py
srepkg/input/: orig_pkg_inspector.py
srepkg/install_components/: MANIFEST.in.template  entry_point.py.template  entry_point_template.py  inner_pkg_installer.py  main_inner.py  main_outer.py  main_outer.py.template  pkg_name.py.template  pkg_names.py.template  setup.py  setup.py.template  setup_template.cfg  srepkg_entry.py.template  srepkg_init.py
test/: black_github_wheel.py  build_wheel_multiple_dist_info.py  build_wheel_no_dist_info.py  remove_wheel_entry_points_console_scripts_section.py  remove_wheel_entry_points_txt.py  repackage_specific_commit.py  shared_fixtures.py  test_bad_yaspin_import.py  test_construction_dir.py  test_custom_exceptions.py  test_dist_builder_subprocess.py  test_dist_provider.py  test_inner_package_installer.py  test_inner_pkg_installer.py  test_logged_err_detecting_subprocess.py  test_logging_initializer.py  test_orig_src_preparer.py  test_remote_pkg_retriever.py  test_repackager.py  test_service_builder.py  test_srepkg.py  test_srepkg_builder.py  test_srepkg_builder_data_structs.py  test_utils.py  test_wheel_entry_point_extractor.py  trouble_shoot_dist_builder_subprocess.py  troubleshooter_flex.py  troubleshooter_repackager_no_mock.py  troubleshooter_srepkg_no_mock.py
test/demos/oldmath/: pyproject.toml
(+240 files in other folders)
