[metadata]
name = srepkg
version = 0.0.1
author = Duane Goodner
author_email = dmgoodner@gmail.com
url = https://github.com/duanegoodner/srepkg
description = Repackages apps to restrict installation into isolated env
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
package_dir=
    =src
packages = find:
python_requires = >= 3.6
include_package_data = True

[options.packages.find]
where = src
exclude = srepkg.test


[options.package_data]
* = *.template, *.cfg

[options.entry_points]
console_scripts =
    srepkg = srepkg.srepkg:main