[metadata]
name = srepkg
version = 0.1.0
author = Duane Goodner
author_email = dmgoodner@gmail.com
url = https://github.com/duanegoodner/srepkg
description = Repackages apps to restrict installation into isolated env
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
package_dir=
    =src
packages = find:
install_requires =
    build
    Cython
    entry_points_txt
    packaging
    pkginfo
;    pytest
    requests
    yaspin




python_requires = >= 3.7
include_package_data = True

[options.packages.find]
where = src
exclude = srepkg.test*

[options.entry_points]
console_scripts =
    srepkg = srepkg.srepkg:main