[metadata]
description = Repackaged by srepkg
name = blacksrepkg
version = 23.1.0

[options]
packages = find_namespace:
include_package_data = True
zip_safe = False
cmdclass = 
	install = cmd_classes.CustomInstallCommand
	develop = cmd_classes.CustomDevelopCommand
	egg_info = cmd_classes.CustomEggInfoCommand

[options.entry_points]
console_scripts = 
	black = blacksrepkg.srepkg_entry_points.black:entry_funct
	blackd = blacksrepkg.srepkg_entry_points.blackd:entry_funct

