[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blacksrepkg"
version = "23.1.0"
description = "Repackaged by srepkg"
requires-python = ">=3.6"
dependencies = []  # Add dependencies if needed

[tool.setuptools]
package-dir = {"" = "."}
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["blacksrepkg*"]
namespaces = true

[tool.setuptools.package-data]
blacksrepkg = ["srepkg_venv/**", "srepkg_entry_points/**", "*"]  # Explicitly include srepkg_venv


[tool.setuptools.cmdclass]
bdist_wheel = "cmd_classes.BdistWheelAbi3"

[project.scripts]
black = "blacksrepkg.srepkg_entry_points.black:entry_funct"
blackd = "blacksrepkg.srepkg_entry_points.blackd:entry_funct"
