[metadata]
description = Repackaged by srepkg
name = t_projsrepkg
version = 0.0.0

[options]
packages = find:
include_package_data = True
zip_safe = False
cmdclass = 
	install = inner_pkg_installer.CustomInstallCommand
	develop = inner_pkg_installer.CustomDevelopCommand
	egg_info = inner_pkg_installer.CustomEggInfoCommand

[options.entry_points]
console_scripts = 
	my_project = t_projsrepkg.srepkg_entry_points.my_project:entry_funct
	my_test = t_projsrepkg.srepkg_entry_points.my_test:entry_funct
	main_entry = t_projsrepkg.srepkg_entry_points.main_entry:entry_funct

