[metadata]
name = tproj
version = 0.0.1

[options]
zip_safe = False
package_dir =
    =src
packages = find:
install_requires =
    numpy
include_package_data = True

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    my_project = tproj.app:run
    my_test = tproj.test:first_test
    main_entry = tproj.__main__:main

[options.package_data]
* = *.*


