;items specific to src layout are commented out

[metadata]
name = t_nonsrc
version = 0.0.1

[options]
zip_safe = False
;package_dir=
;    =src
packages = find:
install_requires =
    numpy
include_package_data = True

;[options.packages.find]
;where = src

[options.entry_points]
console_scripts =
    my_project = t_nonsrc.app:run
    my_test = t_nonsrc.test:first_test
    main_entry = t_nonsrc.__main__:main

[options.package_data]
* = *.*


